force-app/main/default/objects/User_Region_Settings__c/User_Region_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>MBD User list Primarly used in Flow to launch the appropriate US/NON-US P360 App. Any user addition/removal should be mandatory to feed in this Object.  #SDG Contract Compliance Project 2025</description>
    <label>User Region Settings</label>
</CustomObject>