force-app/main/default/objects/User_Region_Settings__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Specific the business division this setting applies to. #SDG Contract Compliance 2025</description>
    <label>Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>