force-app/main/default/objects/User_Region_Settings__c/fields/Malbek_User__c.field-meta.xml
<CustomField>
    <fullName>Malbek_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Malbek User</label>
    <type>Checkbox</type>
</CustomField>