force-app/main/default/objects/User_Region_Settings__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Select the geographical region this setting applies to. #SDG Contract Compliance 2025</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>