force-app/main/default/objects/User_Region_Settings__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <description>Stores the Salesforce User ID to which this configuration applies. #SDG Contract Compliance 2025.</description>
    <inlineHelpText>Enter the 15 digit Salesforce User ID for which this setting applies.</inlineHelpText>
    <label>UserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>